# law-assistant

./: .env.anthropic  .env.ollama  .env.openai  .gitignore  .gitmodules  README.ko.md  README.md  agent.py  pyproject.toml  requirements.txt
law_assistant/: cli.py  config.py  document_loader.py  embeddings.py  llm.py  text_splitter.py  vector_store.py
